--- a/configuration.yaml
+++ b/configuration.yaml
@@ -113,6 +113,10 @@ sensor:
 binary_sensor:
   - platform: workday
     country: GB
+    add_holidays:
+      - '2020-12-29'
+      - '2020-12-30'
+      - '2020-12-31'
 
 yeelight:
   devices:
@@ -140,6 +144,17 @@ input_select:
 garbage_collection:
   sensors:
   - name: General Rubbish
+    frequency: "even-weeks"
+    collection_days: wed
+    verbose_state: True
+    verbose_format: "on {date}, in {days} days"
+    expire_after: '10:00'
+    exclude_dates:
+    - '2021-01-13'
+    include_dates:
+    - '2021-01-02'
+    - '2021-01-14'
+  - name: Recycling Waste
     frequency: "odd-weeks"
     collection_days: wed
     verbose_state: True
@@ -147,16 +162,11 @@ garbage_collection:
     expire_after: '10:00'
     exclude_dates:
     - '2020-12-30'
+    - '2021-01-06'
     include_dates:
-    - '2020-12-31'
-  - name: Recycling Waste
-    frequency: "even-weeks"
-    collection_days: wed
-    verbose_state: True
-    verbose_format: "on {date}, in {days} days"
-    expire_after: '10:00'
+    - '2021-01-08'
   - name: Garden Waste
-    frequency: "even-weeks"
+    frequency: "odd-weeks"
     collection_days: wed
     first_month: "mar"
     last_month: "nov"
