--- a/automations/lights.yaml
+++ b/automations/lights.yaml
@@ -42,6 +42,30 @@
     service: switch.turn_off
     entity_id: switch.hallway_light
 
+- alias: Light - Motion in toilet
+  trigger:
+    platform: state
+    entity_id: binary_sensor.toilet_motion
+    from: 'off'
+    to: 'on'
+  condition:
+    - condition: state
+      entity_id: sun.sun
+      state: 'below_horizon'
+  action:
+    service: light.turn_on
+    entity_id: light.toilet_light
+
+- alias: Light - No motion in toilet
+  trigger:
+    platform: state
+    entity_id: binary_sensor.toilet_motion
+    to: 'off'
+    for: '00:01:00'
+  action:
+    service: light.turn_off
+    entity_id: light.toilet_light
+
 - alias: Light - Kitchen and Bedroom on upon Arrival
   trigger:
     platform: state
