--- a/scripts/scripts.yaml
+++ b/scripts/scripts.yaml
@@ -95,6 +95,16 @@ start_work:
         - media_player.virgin_tivo
         - media_player.philips_tv
 
+finish_work:
+  sequence:
+    - service: climate.turn_off
+      entity_id: climate.study
+    - delay: '00:00:30'
+    - service: light.turn_off
+      entity_id:
+        - light.office_lamp
+        - light.office_light
+
 all_media_off:
   sequence:
     - service: media_player.turn_off
