--- a/automations/lights.yaml
+++ b/automations/lights.yaml
@@ -69,7 +69,7 @@
 - alias: Light - Motion in bathroom
   trigger:
     platform: state
-    entity_id: binary_sensor.bathroom_motion
+    entity_id: binary_sensor.motion_sensor_bathroom
     from: 'off'
     to: 'on'
   condition:
@@ -83,7 +83,7 @@
 - alias: Light - No motion in bathroom
   trigger:
     platform: state
-    entity_id: binary_sensor.bathroom_motion
+    entity_id: binary_sensor.motion_sensor_bathroom
     to: 'off'
     for: '00:01:00'
   action:
@@ -93,7 +93,7 @@
 - alias: Light - Kitchen and Bedroom on upon Arrival
   trigger:
     platform: state
-    entity_id: person.lubos, person.janca
+    entity_id: person.lubos, person.jana
     from: 'not_home'
     to: 'home'
   condition:
@@ -118,30 +118,30 @@
     - service: light.toggle
       entity_id: light.office_light
 
-- alias: Light - Dim Office using Cube
-  initial_state: true
-  trigger:
-    platform: event
-    event_type: xiaomi_aqara.cube_action
-    event_data:
-      entity_id: binary_sensor.cube
-      action_type: rotate
-  # condition:
-  #   condition: numeric_state
-  #   # entity_id: light.office_light
-  #   above: 20
-  #   below: 235
-  #   # If your sensor value needs to be adjusted
-  #   value_template: "{{ states.light.office_light.attributes.brightness }}"
-  action:
-    - service: light.turn_on
-      data_template:
-        entity_id: light.office_light
-        brightness: >
-          {% if not 30 <= states.light.office_light.attributes.brightness <= 225 %} 
-          {{  states.light.office_light.attributes.brightness }}
-          {% elif trigger.event.data.action_value | float > 0 %} 
-          {{  states.light.office_light.attributes.brightness | int + 30 }}
-          {% else %}
-          {{  states.light.office_light.attributes.brightness | int - 30 }}
-          {% endif %}
+# - alias: Light - Dim Office using Cube
+#   initial_state: true
+#   trigger:
+#     platform: event
+#     event_type: xiaomi_aqara.cube_action
+#     event_data:
+#       entity_id: binary_sensor.cube
+#       action_type: rotate
+#   condition:
+#     condition: numeric_state
+#     # entity_id: light.office_light
+#     above: 20
+#     below: 235
+#     # If your sensor value needs to be adjusted
+#     value_template: "{{ states.light.office_light.attributes.brightness }}"
+#   action:
+#     - service: light.turn_on
+#       data_template:
+#         entity_id: light.office_light
+#         brightness: >
+#           {% if not 30 <= states.light.office_light.attributes.brightness <= 225 %} 
+#           {{  states.light.office_light.attributes.brightness }}
+#           {% elif trigger.event.data.action_value | float > 0 %} 
+#           {{  states.light.office_light.attributes.brightness | int + 30 }}
+#           {% else %}
+#           {{  states.light.office_light.attributes.brightness | int - 30 }}
+#           {% endif %}
