--- a/scripts/scripts.yaml
+++ b/scripts/scripts.yaml
@@ -69,7 +69,7 @@ start_work:
 finish_work:
   sequence:
     - service: climate.turn_off
-      entity_id: climate.study
+      entity_id: climate.office
     - delay: '00:00:30'
     - service: script.office_off
 
