--- a/integrations/homeassistant.yaml
+++ b/integrations/homeassistant.yaml
@@ -3,3 +3,5 @@ customize:
     entity_picture: /local/lubos.png
   person.jana:
     entity_picture: /local/janca.png
+whitelist_external_dirs:
+  - /config
