--- a/integrations/homeassistant.yaml
+++ b/integrations/homeassistant.yaml
@@ -4,4 +4,6 @@ customize:
   person.jana:
     entity_picture: /local/janca.png
 whitelist_external_dirs:
-  - /config
+  - /config/automations
+  - /config/integrations
+  - /config/scripts
