--- a/automations/automations.yaml
+++ b/automations/automations.yaml
@@ -113,3 +113,15 @@
     - service: media_player.turn_off
       entity_id:
         - media_player.downstairs_speakers
+
+- alias: Notify when folder watcher kicks in
+  trigger:
+    platform: event
+    event_type: folder_watcher
+  action:
+    service: notify.mobile_app_mi_9
+    data:
+      title: File changed
+      message: "Created {{ trigger.event.data.file }} in {{ trigger.event.data.folder }}"
+#       data:
+#         file: "{{ trigger.event.data.path }}"
