--- a/integrations/input_datetime.yaml
+++ b/integrations/input_datetime.yaml
@@ -2,6 +2,10 @@ heating_on:
   name: Heating on
   has_date: false
   has_time: true
+morning:
+  name: Morning
+  has_date: false
+  has_time: true
 heating_off:
   name: Heating off
   has_date: false
