--- a/scripts/heating.yaml
+++ b/scripts/heating.yaml
@@ -12,6 +12,7 @@ set_thermostat:
 heating_morning:
   sequence:
     - service: script.refresh_heating_on_timer
+    - service: script.refresh_morning_timer
     - service: script.set_thermostat
       data:
         entity_id: climate.living_room
@@ -110,6 +111,14 @@ refresh_heating_on_timer:
         entity_id: input_datetime.heating_on
       data:
         time: "{{ '06:30' if is_state('binary_sensor.workday_tomorrow', 'on') else '07:30' }}"
+
+refresh_morning_timer:
+  sequence:
+    - service: input_datetime.set_datetime
+      target:
+        entity_id: input_datetime.morning
+      data:
+        time: "{{ '08:00' if is_state('binary_sensor.workday_tomorrow', 'on') else '09:00' }}"
 
 refresh_heating_off_timer:
   sequence:
