--- a/automations/automations.yaml
+++ b/automations/automations.yaml
@@ -120,7 +120,7 @@
       event_type: folder_watcher
   action:
     - service_template: >
-        {% if "integrations" in trigger.event.data.folder %} homeassistant.reload_core_config
+        {% if "integrations" in trigger.event.data.folder %} homeassistant.restart
         {% elif "automations" in trigger.event.data.folder %} automation.reload
         {% elif "scripts" in trigger.event.data.folder %} script.reload
         {% endif %}
