--- a/scripts/heating.yaml
+++ b/scripts/heating.yaml
@@ -109,8 +109,13 @@ refresh_heating_on_timer:
     - service: input_datetime.set_datetime
       target:
         entity_id: input_datetime.heating_on
-      data:
-        time: "{{ '06:30' if is_state('binary_sensor.workday_tomorrow', 'on') else '07:30' }}"
+      data_template:
+        data:
+          time: >
+            {% set temp = states('sensor.living_room_temperature') %}  
+            {% set heat = 20 %}
+            {% set speed = 30 %}
+            {{ (((state_attr('input_datetime.morning' , 'timestamp')) - ((heat - float(temp)) * speed * 60))|timestamp_custom('%H:%M', false)) }}
 
 refresh_morning_timer:
   sequence:
