Tweaks into heating early start

--- a/scripts/heating.yaml
+++ b/scripts/heating.yaml
@@ -111,9 +111,9 @@ refresh_heating_on_timer:
       data:
         time: >
           {% set temp = states('sensor.living_room_temperature') %}  
-          {% set heat = 20 %}
+          {% set target = 20 %}
           {% set speed = 30 %}
-          {{ (((state_attr('input_datetime.morning' , 'timestamp')) - ((heat - float(temp)) * speed * 60))|timestamp_custom('%H:%M', false)) }}
+          {{ (((state_attr('input_datetime.morning' , 'timestamp')) - ((target - float(temp)) * speed * 60))|timestamp_custom('%H:%M', false)) }}
 
 refresh_morning_timer:
   sequence:
