--- a/automations/automations.yaml
+++ b/automations/automations.yaml
@@ -114,18 +114,23 @@
       entity_id:
         - media_player.downstairs_speakers
 
-- alias: Reload config automatically
+- alias: Reload automations
   trigger:
-    - platform: event
-      event_type: folder_watcher
+    - platform: webhook
+      webhook_id: automations
   action:
-    - service: notify.mobile_app_mi_9
-      data_template:
-        title: File changed
-        message: >
-          {{ trigger.event.data.folder }}
-    - service_template: >
-        {% if "integrations" in trigger.event.data.folder %} homeassistant.restart
-        {% elif "automations" in trigger.event.data.folder %} automation.reload
-        {% elif "scripts" in trigger.event.data.folder %} script.reload
-        {% endif %}
+    - service: automation.reload
+
+- alias: Reload integrations
+  trigger:
+    - platform: webhook
+      webhook_id: integrations
+  action:
+    - service: homeassistant.restart
+
+- alias: Reload scripts
+  trigger:
+    - platform: webhook
+      webhook_id: scripts
+  action:
+    - service: script.reload
