--- a/automations/automations.yaml
+++ b/automations/automations.yaml
@@ -119,6 +119,11 @@
     - platform: webhook
       webhook_id: automations
   action:
+    - service: notify.mobile_app_mi_9
+      message: >
+        Trigger query: {{ trigger.query }}
+        Trigger json: {{ trigger.json }}
+        Trigger data: {{ trigger.data }}
     - service: automation.reload
 
 - alias: Reload integrations
