--- a/automations/automations.yaml
+++ b/automations/automations.yaml
@@ -120,10 +120,12 @@
       webhook_id: automations
   action:
     - service: notify.mobile_app_mi_9
-      message: >
-        Trigger query: {{ trigger.query }}
-        Trigger json: {{ trigger.json }}
-        Trigger data: {{ trigger.data }}
+      data_template:
+        title: Home Assistant
+        message: >
+          Trigger query: {{ trigger.query }}
+          Trigger json: {{ trigger.json }}
+          Trigger data: {{ trigger.data }}
     - service: automation.reload
 
 - alias: Reload integrations
