--- a/automations/automations.yaml
+++ b/automations/automations.yaml
@@ -123,9 +123,9 @@
       data_template:
         title: Home Assistant
         message: >
-          Trigger query: {{ str(trigger.query) }}
-          Trigger json: {{ str(trigger.json) }}
-          Trigger data: {{ str(trigger.data) }}
+          Trigger query: {{ trigger.query }}
+          Trigger json: {{ trigger.json }}
+          Trigger data: {{ trigger.data }}
     - service: automation.reload
 
 - alias: Reload integrations
