Adding in bedroom AQI sensor

--- a/integrations/sensor.yaml
+++ b/integrations/sensor.yaml
@@ -37,3 +37,7 @@
       friendly_name: "Office Air Quality"
       value_template: '{{ states.fan.office_purifier.attributes.aqi }}'
       unit_of_measurement: 'PM'
+    bedroom_aqi:
+      friendly_name: "Bedroom Air Quality"
+      value_template: '{{ states.fan.bedroom_purifier.attributes.aqi }}'
+      unit_of_measurement: 'PM'
