Turn Xbox off when required

--- a/scripts/rooms.yaml
+++ b/scripts/rooms.yaml
@@ -21,6 +21,7 @@ downstairs_off:
       entity_id:
         - media_player.downstairs_speakers
         - media_player.philips_tv
+        - media_player.xboxone
 
 bedroom_off:
   sequence:
