--- a/scripts/heating.yaml
+++ b/scripts/heating.yaml
@@ -18,6 +18,10 @@ heating_early_morning:
       data:
         entity_id: climate.living_room
         temperature: 20
+    - service: script.set_thermostat
+      data:
+        entity_id: climate.bedroom
+        temperature: 19
 
 heating_morning:
   sequence:
@@ -30,10 +34,8 @@ heating_morning:
       data:
         entity_id: climate.kitchen
         temperature: 19
-    - service: script.set_thermostat
-      data:
-        entity_id: climate.bedroom
-        temperature: 20
+    - service: climate.turn_off
+      entity_id: climate.bedroom
     - condition: state
       entity_id: binary_sensor.workday_today
       state: 'on'
