Adding in ARC restart script

--- a/scripts/scripts.yaml
+++ b/scripts/scripts.yaml
@@ -146,7 +146,19 @@ restart_tado:
     - service: switch.turn_off
       entity_id:
         - switch.sonoff_tado_usb
-    - delay: '00:00:10'
+    - delay: '00:00:05'
     - service: switch.turn_on
       entity_id:
         - switch.sonoff_tado_usb
+
+restart_arc_devices:
+  sequence:
+    - service: switch.turn_off
+      entity_id:
+        - switch.soundbar
+        - switch.tv_socket
+    - delay: '00:00:05'
+    - service: switch.turn_on
+      entity_id:
+        - switch.soundbar
+        - switch.tv_socket
